<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".homepage">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingLeft="10dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="160dp"
            android:layout_height="203dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/hihi"
            android:src="@drawable/robot"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_message"
            android:layout_width="200dp"
            android:layout_height="180dp"
            android:adjustViewBounds="true"
            android:src="@drawable/message"
            app:layout_constraintBottom_toBottomOf="@+id/logo"
            app:layout_constraintLeft_toRightOf="@id/logo"
            app:layout_constraintTop_toTopOf="@+id/logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="121dp"
            android:layout_height="99dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="65dp"
            android:text="@string/welcomeText"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/img_message"
            app:layout_constraintLeft_toLeftOf="@+id/img_message"
            app:layout_constraintTop_toTopOf="@+id/img_message"
            tools:ignore="MissingConstraints" />
    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/buttons"
        android:layout_width="384dp"
        android:layout_height="0dp"
        android:background="@color/mainblue"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        app:layout_constraintVertical_bias="1.0">


        <ImageView
            android:id="@+id/btn_menu"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:src="@drawable/menu"
            app:layout_constraintEnd_toStartOf="@+id/btn_today"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_today"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:src="@drawable/index"
            app:layout_constraintEnd_toStartOf="@+id/btn_stock"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_menu"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView

            android:id="@+id/btn_stock"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:src="@drawable/stock"
            app:layout_constraintEnd_toStartOf="@+id/btn_news"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_today"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_news"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:src="@drawable/news"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_stock"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btnText_menu"
            android:text="@string/menuText"
            app:layout_constraintStart_toStartOf="@+id/btn_menu"
            app:layout_constraintTop_toBottomOf="@+id/btn_menu"
            style="@style/homepageButtonText" />

        <TextView
            android:id="@+id/btnText_today"
            android:text="@string/todayText"
            app:layout_constraintStart_toStartOf="@+id/btn_today"
            app:layout_constraintTop_toBottomOf="@+id/btn_today"
            style="@style/homepageButtonText" />
        <TextView
            android:id="@+id/btnText_stock"
            android:text="@string/stockText"
            app:layout_constraintStart_toStartOf="@+id/btn_stock"
            app:layout_constraintTop_toBottomOf="@+id/btn_stock"
            style="@style/homepageButtonText" />
        <TextView
            android:id="@+id/btnText_news"
            android:text="@string/newsText"
            app:layout_constraintStart_toStartOf="@+id/btn_news"
            app:layout_constraintTop_toBottomOf="@+id/btn_news"
            style="@style/homepageButtonText" />


    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />
    <android.support.constraint.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />
</android.support.constraint.ConstraintLayout>


